--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,19 @@ body {
     background-color: #ffffff;
   }
 }
+
+.wrapper {
+  backgroundColor: lightyellow;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.map {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
