--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,20 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.loading-modal {
+  z-index: 1102 !important;
+}
+
+.loading-modal .inner {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-modal .MuiModal-backdrop {
+  background-color: rgba(255, 255, 255, 0.8);
+}
