--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,21 @@ body {
   align-items: center;
 }
 
-.map {
+.map,
+.map-wrapper {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+.map-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.map-wrapper > .add-icon {
+  z-index: 1;
 }
 
 .loading-modal {
