Several updates around choosing packs
* Ensure new pack is set as current when downloaded and the map updates
* Wipe the map when deleting a pack
* Show a prompt instead of the map when no pack has been set as current

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,9 @@ body {
   height: 100%;
 }
 
+.map { visibility: hidden; }
+.map.loaded { visibility: visible; }
+
 .map-wrapper {
   display: flex;
   justify-content: center;
