--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  overscroll-behavior: none;
 }
 
 @media (prefers-color-scheme: light) {
@@ -71,4 +72,72 @@ body {
 
 .loading-modal .MuiModal-backdrop {
   background-color: rgba(255, 255, 255, 0.8);
+}
+
+.MapBottomSheet {
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.MapBottomSheetHeader {
+  width: 100%;
+  background: none;
+  text-align: start;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  cursor: grab;
+}
+.vaul-dragging .MapBottomSheetHeader {
+  cursor: grabbing;
+}
+
+.MapBottomSheetHeaderContent {
+  flex-grow: 1;
+  overflow: hidden;
+}
+
+.MapBottomSheetHeaderContent h3 {
+  display: block;
+  margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.MapBottomSheet.open .MapBottomSheetHeader,
+.MapBottomSheet.open .MapBottomSheetHeaderContent h3 {
+  overflow: visible;
+  white-space: wrap;
+  height: auto !important;
+}
+
+.MapBottomSheetHeaderPreview {
+  display: flex;
+  flex-direction: row;
+}
+.MapBottomSheetHeaderPreview > * {
+  width: 50%;
+}
+.MapBottomSheetHeaderPreview label {
+  display: inline-block;
+  margin-inline-end: 5px;
+  font-weight: bold;
+}
+@media only screen and (max-width: 600px) {
+  .MapBottomSheetHeaderPreview label {
+    display: none;
+  }
+}
+
+.MapBottomSheetHeaderActions {
+  display: 'flex',
+  alignItems: 'start'
+}
+
+.MapBottomSheetBody {
+  padding: 0 20px 20px 20px;
+  overflow-y: auto;
+  flex-grow: 2;
 }
